feat: Fix plugin.yaml version injection to use output resources

--- a/build.gradle
+++ b/build.gradle
@@ -166,6 +166,7 @@ afterEvaluate {
         })
         jarTaskName.set('jarLite')
         outputFile.set(layout.buildDirectory.file('tmp/jarLite/META-INF/plugin-components.idx'))
+        dependsOn 'processResources' // 确保在 processResources 之后运行
         doFirst(configurePluginYamlVersion())
     }
 
